part3 compiling, seg fault idk why

--- a/part3/examples/Makefile1.common
+++ b/part3/examples/Makefile1.common
@@ -5,7 +5,7 @@ CPP =		mpic++
 CCFLAGS =	-g -O -I../src -m64
 LINK =		mpic++ -m64
 LINKFLAGS =	-g -O -m64
-USRLIB =	../src/libmrmpi_mac64.a
+USRLIB =	../src/libmrmpi_mac.a
 SYSLIB =
 
 
